RegressionTests/TestSuiteExport/reject/invalid_yield.blade
// EXPECT: fail
// DIAGNOSTICS: E0210

fn f() void {
    yield;
}